add format check to using existing google format jar